--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".Transaction"
+            android:name=".TransactionActivity"
             android:label="@string/title_activity_transaction" >
         </activity>
     </application>
